[gd_scene load_steps=9 format=3 uid="uid://cpb1vm3k708ep"]

[ext_resource type="Script" path="res://chest.gd" id="1_qr4pt"]
[ext_resource type="PackedScene" uid="uid://britqjf7cd27v" path="res://interaction/Interactable.tscn" id="2_xqesr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0mkaw"]

[sub_resource type="BoxMesh" id="BoxMesh_7uhuh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fvrbj"]
albedo_color = Color(0.32549, 0.12549, 0, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_llkdb"]
_surfaces = [{
"aabb": AABB(-0.557735, -0.557735, -0.557735, 1.11547, 1.11548, 1.11548),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 170, 62, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 171, 170, 42, 63, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 171, 170, 170, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 4, 0, 2, 0, 2, 0, 4, 0, 6, 0, 1, 0, 5, 0, 3, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 20, 0, 18, 0, 18, 0, 20, 0, 22, 0, 17, 0, 21, 0, 19, 0, 19, 0, 21, 0, 23, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 63, 185, 199, 14, 191, 185, 199, 14, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 255, 255, 0, 128, 255, 255, 255, 255, 0, 0, 0, 128, 255, 127, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191, 0, 128, 255, 255, 0, 0, 255, 191, 0, 128, 0, 0, 255, 255, 255, 191)
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lbol7"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_mb8es"]

[node name="chest" type="Node3D"]
script = ExtResource("1_qr4pt")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_0mkaw")

[node name="visuals" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_7uhuh")
surface_material_override/0 = SubResource("StandardMaterial3D_fvrbj")

[node name="highlight" type="MeshInstance3D" parent="visuals"]
visible = false
mesh = SubResource("ArrayMesh_llkdb")
surface_material_override/0 = SubResource("StandardMaterial3D_lbol7")

[node name="Interactable" parent="." instance=ExtResource("2_xqesr")]

[node name="CollisionShape3D" parent="Interactable" index="0"]
shape = SubResource("BoxShape3D_mb8es")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
